serviceblog/blog/static/css/blog.css
body {
  -webkit-font-smoothing: antialiased;
  margin: 0px;
  font-family: RobotoDraft, Roboto, 'Helvetica Neue', sans-serif;
  font-weight: 400;
  background-color: rgba(0, 0, 0, .07);
  margin-top: 64px;
  min-height: calc(100vh - 64px);
  padding: 1em;
}
.toolbar {
  position: fixed;
  top: 0;
  left: 0;
  font-size: 20px;
  background: #fff;
  box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .14), 0 2px 2px 0 rgba(0, 0, 0, .28), 0 1px 5px 0 rgba(0, 0, 0, .084);
  width: 100%;
  height: 64px;
  min-height: 64px;
  z-index: 2;
}

.servicelogo {
display:inline;
}

.toolbar-right {
  display: inherit;
  float: right;
}

.blogtitle h1 {
  padding-left: .8em;
  color: black;
  font-size: 40px;
  font-weight: 300;
  line-height: 42px;
  min-height: 2em;
  text-align: center;
}
.blogtitle {
  padding-left: 20%;
  padding-right: 25%;
  border-bottom: 1px solid rgba(0, 0, 0, .06);
  padding-top: 2em;
}

.login {
  font-family: RobotoDraft, Roboto, 'Helvetica Neue', sans-serif;
  font-size: 14px;
  font-weight: 500;
  color: rgb(3, 169, 244);
  letter-spacing: 0.14px;
  line-height: 36px;
  text-decoration: none;
  text-transform: uppercase;
  -webkit-font-smoothing: antialiased;
  display: inline;
  padding-right: 15px;
  float: right;
  margin-top: 12px;
}
.logincontainer{
  display:inherit;
}
.container {
  max-height: 64px;
  display: inline;
  max-width: 1250px;
}

.serviceBanner {
  max-width: 180px;
  margin-top: 18px;
}


.pagecontainer {
  margin: 0 auto;
  background-color: #fff;
  max-width: 1250px;
  min-height: calc(100vh - 96px);
  box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .14), 0 2px 2px 0 rgba(0, 0, 0, .28), 0 1px 5px 0 rgba(0, 0, 0, .084);
}

.leftcontent {
  padding: 1em;
  padding-right: 0;
  padding-left: 5em;
  display: inline-block;
  width: 100%;
  padding-top: 1.4em;
  border-right: 1px solid rgba(0, 0, 0, .03);

}

@media (min-width: 960px) {
  .leftcontent {
  width: calc(100% - 26em);
  }
}


.rightcontent {
  display: inline-block;
  padding: 1em;
  padding-right: 30px;
  position: relative;
  text-align: center;
  min-height: calc(100vh - 128px);
  float:right;
  padding-top: 38px;
}
@media (max-width: 959px) {
  .rightcontent {
    display: none;
  }
}
@media (min-width: 600px) {
  /*.rightcontent {
    width: 15em;
    font-size: 70%;
  } */
}
@media (min-width: 960px) {
  .rightcontent {
    width: 17em;
  }
}

.rightcontent a {
  color: rgb(3, 169, 244);
}


@media (max-width: 900px) {

  .leftcontent img {
    min-width: 65vw !important;
    padding-left: 6px !important;
  }
  .leftcontent {
      padding-left: 0px;
  }
}
.admin-control {
  margin-top: 1em;
    max-width: 1250px;
  margin-left: auto;
  margin-right: auto;
  display: block;
}

.postwrapper > h2{
  margin-top: 0px;
}


.commentbox {
  padding-bottom: 36px;
  max-width: 60vw;
  max-height: 400px;
  min-width: 60vw;
}
.blogfooter {
  padding-top: 24px;
  padding-bottom: 36px;
  padding-right: 24px;
}
.leftcontent img {
  padding-top: 32px;
  padding-bottom: 32px;
  max-width: 95%;
  min-width: 95%;
}

.navheader {
font-size: 24px;
padding-top: 1.2em;
padding-bottom: .8em;
  text-decoration: none !important;
}
.postwrapper {
  padding-left: 3em;
  width: 80%;
 word-wrap: break-word;
 padding-bottom: 20px;
}


.postwrapper h1 {
  color: black;
  font-size: 40px;
  font-weight: 400;
  line-height: 42px;
}
.postwrapper h2 {
  font-size: 24px;
  font-weight: normal;
  margin-bottom: 0px;
  margin-top: 40px;
}
.postwrapper h3 {
  font-size: 14px;
  font-weight: 400;
  opacity: .4;
}
.postwrapper h4 {
  font-size: 14px;
  font-weight: 400;
  line-height: 0;
  opacity: .5;
  padding-bottom: 30px;
  padding-left: 4px;
}
.postwrapper h5 {
  font-size: 32px;
}
.postwrapper p {
  font-size: 17px;
  font-weight: 400;
  line-height: 32px;
}
}

.postwrapper a {
  color: rgb(59, 169, 244);
  font-size: 16px;
  font-weight: 400;
  line-height: 20px;
  text-decoration: none;

}

a {
    text-decoration: none !important;
}

a:visited {
  color: rgb(59, 169, 244);
}

.rightcontent h2 {
 font-size: 18px;
}
.rightcontent h3 {
  font-size: 14px;
  font-weight: 400;
  line-height: 0;
  opacity: .5;
  padding-bottom: 30px;
  padding-left: 4px;
}


.newblog {
padding: .5em;
background-color: rgb(59, 169, 244);
color: white !important;
border-radius: 3px;
margin-bottom: 2em;

}

.thisshouldwork {
  margin: auto;
  max-width: 1250px;
  padding-left: 15px;
}

